post-task02-note

--- a/task02.html
+++ b/task02.html
@@ -133,15 +133,15 @@
         <label for="mail">请输入邮箱地址：</label>
         <input id="mail" type="text" placeholder="这是一个文本输入框">
         
-        <span>邮箱地址请按要求格式输入</span><br>
+        <span class="unselectable" onselectstart="return false;" unselectable="on">邮箱地址请按要求格式输入</span><br>
 
         <label for="passsword">请输入密码：</label>
         <input id="passsword" type="text" placeholder="这是一个文本输入框">
-        <span>密码请为6-16位英文数字</span><br>
+        <span class="unselectable" onselectstart="return false;" unselectable="on">密码请为6-16位英文数字</span><br>
 
         <label for="repeat">请重复输入密码：</label>
         <input type="text" placeholder="这是一个文本输入框" id="repeat">
-        <span>密码请为6-16位英文数字</span>      
+        <span class="unselectable" onselectstart="return false;" unselectable="on">密码请为6-16位英文数字</span>      
       </fieldset>
       <fieldset id="fieldset2">
         <legend>其他个人信息</legend>
