在修改task01和task02笔记之前

--- a/task02.html
+++ b/task02.html
@@ -85,6 +85,15 @@
       <figcaption>好看的图片</figcaption>
       <img src="img/logo.jpg" alt="img/logo.jpg">
     </figure>
+    <h2>对比dl/dt/dd系列标签</h2>
+    <dl>
+      <dt>好看的图片</dt>
+      <dd><img src="img/logo.jpg" alt="img/logo.jpg"></dd>
+      <dt>好看的图片</dt>
+      <dd><img src="img/logo.jpg" alt="img/logo.jpg"></dd>
+      <dt>好看的图片</dt>
+      <dd><img src="img/logo.jpg" alt="img/logo.jpg"></dd>
+    </dl>
   </article>
 
   <article class="article">
