--- a/task03三栏布局/按普通顺序编写/1普通方法-用margin分开.html
+++ b/task03三栏布局/按普通顺序编写/1普通方法-用margin分开.html
@@ -33,11 +33,12 @@
     </style>
   </head>
   <body>
-    <div id="main-content"></div>
-    <div class="sub">sub</div>
-    <div class="extra">extra</div>
-    <div class="main">
-      按顺序加载，普通方法：用main区域的margin形成main区域。
+    <div id="main-content">
+      <div class="sub">sub</div>
+      <div class="extra">extra</div>
+      <div class="main">
+        按顺序加载，普通方法：用main区域的margin形成main区域。
+      </div>
     </div>
   </body>
 </html>
